# johnnybgoode

./: .gitignore  Cargo.toml  GOALPOSTS.md  LICENSE  README.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTE.md  DEPLOYMENT.md  ERRORS.md  FIRST_TIME_USERS.md  GOALPOSTS.md  SHELL_SETUP.md  USER_MANUAL.md  example_config.yaml
dummydecimal/00-09-Animals/03-Birds/03.02-Parrots/: README.md
src/: err_table  err_table.json  lib.rs  main.rs
