[package]
name = "johnnybgoode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
clipboard = "0.5.0"
walkdir = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.2"
downloader = "0.2.7"
directories = "5.0.1"