[package]
name = "johnnybgoode"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.2"
directories = "5.0.1"
regex = "1.10.4"
serde_json = "1.0.133"
